...
    // banner 照片选取
    var imgPricker: UIImagePickerController!
    // 左边菜单按钮
    private lazy var leftBarButton: UIButton = {
        let btn = UIButton.init(type: .custom)
        btn.frame = CGRect(x: -5, y: 0, width: 20, height: 30)
        btn.setImage(UIImage(named: "menu"), for: .normal)
        btn.rx.tap.subscribe(onNext: {[weak self] in
            let leftVC = UIApplication.shared.windows[0].rootViewController as! LeftSlideViewController
            guard leftVC.closed else {
                leftVC.closeLeftView()
                return
            }
...
                self?.navigationController?.pushViewController(webVC, animated: true)
            })
            .disposed(by: disposeBag)
        // 考试查询
        exam.rx.tap
            .subscribe(onNext: { [weak self] in
                let webVC = BaseWebController(webURL: getExamAPI, navTitle: "考试计划")
                self?.navigationController?.pushViewController(webVC, animated: true)
            })
            .disposed(by: disposeBag)
        // 成绩查询
        scoreBtn.rx.tap
            .subscribe(onNext: { [weak self] in
...
