...
    @objc public var btnTitleColor: UIColor = kPV_RGBA(r: 51, g: 51, b: 51, a: 1)
    // 按钮文字大小
    @objc public var btnTitleFont: CGFloat = 17.0
    // 取消按钮名称
    @objc public var cancelBtnTitle = "取消"
    // 确定按钮名称
    @objc public var confirmBtnTitle = "确定"

    public override func reSetParams() {
        super.reSetParams()

    }
}
...
